--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -43,6 +43,63 @@ body {
     opacity: 0.8;
 }
 
-.destino_grid {
-    border: 1px blue solid;
+.section_title {
+    text-align: center;
+    margin: 30px;
+    padding: 20px;
+}
+
+.banner {
+    width:100%;
+    height: auto;
+    text-align: center;
+    position: relative;
+    display: inline-block;
+}
+
+.banner_img {
+    width: 100%; /* ou tamanho fixo */
+    height: auto;
+    display: block;
+}
+
+.banner_popup {
+    position: absolute;
+    top: 20px; /* ajuste conforme necessário */
+    left: 20px; /* ajuste conforme necessário */
+    color: #ffffff;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.5); /* fundo semitransparente */
+    padding: 10px;
+    margin: 40px;
+    border-radius: 8px;
+    font-size: 32px;
+    align-items: center;
+}
+
+  .container_cards {
+
+}
+
+.destinos_grid {
+    border: 5px blue solid;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
+
+.destinos_card {
+    background: white;
+    margin: 30px 30px;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+    border: 2px solid green;
+}
+
+.destinos_img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    transition: transform 0.9s;
 }
